--- a/Idle Factory/HUD/HUD Actions/GameMarketplaceScene/GameMarketplaceScene.storyboard
+++ b/Idle Factory/HUD/HUD Actions/GameMarketplaceScene/GameMarketplaceScene.storyboard
@@ -169,17 +169,17 @@
                                         </collectionViewFlowLayout>
                                         <cells>
                                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="purchasebleFactory_cell" id="HPR-26-3fr" customClass="GameMarketplaceViewCell" customModule="Idle_Factory" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="9.5" width="131" height="200"/>
+                                                <rect key="frame" x="0.0" y="9" width="131" height="201"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="WBj-l3-Jnz">
-                                                    <rect key="frame" x="0.0" y="0.0" width="131" height="200"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="131" height="201"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <subviews>
                                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="auJ-6b-ZqW">
-                                                            <rect key="frame" x="0.0" y="0.0" width="131" height="184"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="131" height="185"/>
                                                             <subviews>
                                                                 <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="center" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="XBS-CF-vpz">
-                                                                    <rect key="frame" x="25" y="122" width="81" height="15"/>
+                                                                    <rect key="frame" x="25" y="123" width="81" height="15"/>
                                                                     <subviews>
                                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="4k.tv" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="O6R-SW-20A">
                                                                             <rect key="frame" x="0.0" y="0.5" width="12.5" height="14"/>
@@ -217,7 +217,7 @@
                                                                     </constraints>
                                                                 </stackView>
                                                                 <stackView opaque="NO" contentMode="scaleToFill" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="8bK-tZ-fOA">
-                                                                    <rect key="frame" x="17" y="150" width="101" height="18"/>
+                                                                    <rect key="frame" x="17" y="151" width="101" height="18"/>
                                                                     <subviews>
                                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Coin" translatesAutoresizingMaskIntoConstraints="NO" id="KLN-CC-zsw">
                                                                             <rect key="frame" x="0.0" y="0.0" width="26" height="18"/>
@@ -234,13 +234,9 @@
                                                                         </label>
                                                                     </subviews>
                                                                 </stackView>
-                                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="nmH-60-SgG">
-                                                                    <rect key="frame" x="15.5" y="5" width="100" height="100"/>
-                                                                    <constraints>
-                                                                        <constraint firstAttribute="height" constant="100" id="bJl-8a-qcT"/>
-                                                                        <constraint firstAttribute="width" secondItem="nmH-60-SgG" secondAttribute="height" multiplier="1:1" id="p0m-x4-fcQ"/>
-                                                                    </constraints>
-                                                                </imageView>
+                                                                <skView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bAn-mb-2hG">
+                                                                    <rect key="frame" x="8" y="8" width="115" height="107"/>
+                                                                </skView>
                                                             </subviews>
                                                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                             <constraints>
@@ -248,16 +244,17 @@
                                                                 <constraint firstAttribute="trailing" secondItem="XBS-CF-vpz" secondAttribute="trailing" constant="25" id="4Uj-AL-0HQ"/>
                                                                 <constraint firstItem="XBS-CF-vpz" firstAttribute="centerX" secondItem="auJ-6b-ZqW" secondAttribute="centerX" id="5kw-Ae-osk"/>
                                                                 <constraint firstItem="8bK-tZ-fOA" firstAttribute="leading" secondItem="auJ-6b-ZqW" secondAttribute="leading" constant="17" id="HWY-Ja-kod"/>
+                                                                <constraint firstAttribute="trailing" secondItem="bAn-mb-2hG" secondAttribute="trailing" constant="8" id="JGv-m6-g3s"/>
                                                                 <constraint firstAttribute="bottom" secondItem="8bK-tZ-fOA" secondAttribute="bottom" constant="16" id="QTv-Eb-xHt"/>
-                                                                <constraint firstItem="nmH-60-SgG" firstAttribute="centerX" secondItem="auJ-6b-ZqW" secondAttribute="centerX" id="ST5-Nw-HBU"/>
+                                                                <constraint firstItem="bAn-mb-2hG" firstAttribute="top" secondItem="auJ-6b-ZqW" secondAttribute="top" constant="8" id="YWF-fo-w8p"/>
+                                                                <constraint firstItem="XBS-CF-vpz" firstAttribute="top" secondItem="bAn-mb-2hG" secondAttribute="bottom" constant="8" symbolic="YES" id="Z3r-ew-tVR"/>
                                                                 <constraint firstAttribute="trailing" secondItem="8bK-tZ-fOA" secondAttribute="trailing" constant="13" id="Za4-xe-iHf"/>
-                                                                <constraint firstItem="nmH-60-SgG" firstAttribute="top" secondItem="auJ-6b-ZqW" secondAttribute="top" constant="5" id="nyp-kl-Coz"/>
                                                                 <constraint firstItem="8bK-tZ-fOA" firstAttribute="top" secondItem="XBS-CF-vpz" secondAttribute="bottom" constant="13" id="onJ-w9-5Kh"/>
-                                                                <constraint firstItem="XBS-CF-vpz" firstAttribute="top" secondItem="nmH-60-SgG" secondAttribute="bottom" constant="17" id="yuW-y3-ETO"/>
+                                                                <constraint firstItem="bAn-mb-2hG" firstAttribute="leading" secondItem="auJ-6b-ZqW" secondAttribute="leading" constant="8" id="pVu-kD-Len"/>
                                                             </constraints>
                                                         </view>
                                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Yt5-m7-xqD">
-                                                            <rect key="frame" x="22" y="173" width="87" height="21"/>
+                                                            <rect key="frame" x="22" y="175" width="87" height="21"/>
                                                             <color key="backgroundColor" name="actionColor1"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" constant="87" id="JGs-dw-yxj"/>
@@ -284,9 +281,9 @@
                                                     </constraints>
                                                 </collectionViewCellContentView>
                                                 <connections>
+                                                    <outlet property="SKView" destination="bAn-mb-2hG" id="IgR-aS-NO6"/>
                                                     <outlet property="cardView" destination="auJ-6b-ZqW" id="PqP-yL-md2"/>
                                                     <outlet property="coinImage" destination="KLN-CC-zsw" id="WB0-C1-RmN"/>
-                                                    <outlet property="generatorImage" destination="nmH-60-SgG" id="Ifb-5I-Z68"/>
                                                     <outlet property="priceLabel" destination="5eo-lf-kmA" id="wNt-Tl-xIb"/>
                                                     <outlet property="resourceQuantityType1" destination="Yo1-bd-2S7" id="Moc-1H-NUo"/>
                                                     <outlet property="resourceQuantityType2" destination="4ML-zS-55P" id="r43-Qd-yJ4"/>
@@ -332,7 +329,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="95" y="101"/>
+            <point key="canvasLocation" x="94.419642857142847" y="100.00000000000001"/>
         </scene>
         <!--Game Announce Scene View Controller-->
         <scene sceneID="B6A-wA-TO9">
@@ -605,7 +602,7 @@
             <color red="0.77999997138977051" green="0.16500000655651093" blue="0.23100000619888306" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="Marketplace_background">
-            <color red="0.89803921568627454" green="0.89803921568627454" blue="0.89803921568627454" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.89800000190734863" green="0.89800000190734863" blue="0.89800000190734863" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="actionColor1">
             <color red="0.6470000147819519" green="0.87099999189376831" blue="0.27099999785423279" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
