--- a/Idle Factory/HUD/HUD Actions/GameMarketplaceScene/GameMarketplaceScene.storyboard
+++ b/Idle Factory/HUD/HUD Actions/GameMarketplaceScene/GameMarketplaceScene.storyboard
@@ -265,8 +265,7 @@
                                                             <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                             <state key="normal" title="See more"/>
                                                             <connections>
-                                                                <action selector="seeMore:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="1X0-1E-XHD"/>
-                                                                <action selector="seeMoreAction:" destination="HPR-26-3fr" eventType="touchUpInside" id="WNH-rH-LHV"/>
+                                                                <action selector="seeMore:" destination="HPR-26-3fr" eventType="touchUpInside" id="kOa-9J-8NL"/>
                                                             </connections>
                                                         </button>
                                                     </subviews>
@@ -602,7 +601,7 @@
             <color red="0.77999997138977051" green="0.16500000655651093" blue="0.23100000619888306" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="Marketplace_background">
-            <color red="0.89800000190734863" green="0.89800000190734863" blue="0.89800000190734863" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.63899999856948853" green="0.63899999856948853" blue="0.63899999856948853" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="actionColor1">
             <color red="0.6470000147819519" green="0.87099999189376831" blue="0.27099999785423279" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
